Initial attempt at puppetizing my workstation

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.pp]
+indent_size = 2
+
 [home/config/htop/htoprc]
 trim_trailing_whitespace = false
 
