Add to Hiera data hierarchy

--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -4,6 +4,7 @@
 :hierarchy:
   - "node/%{::fqdn}"
   - "osfamily/%{::osfamily}"
+  - "virtual/%{::virtual}"
   - common
 :yaml:
   :datadir: 'hieradata'
