--- a/modules/Makefile
+++ b/modules/Makefile
@@ -1,12 +1,8 @@
 .PHONY: all
-all: git-extras tig
+all: git-extras
 
 submake = make --no-print-directory -C $(1) $(2)
 
 .PHONY: git-extras
 git-extras:
 	@sudo $(call submake,$@,install)
-
-.PHONY: tig
-tig:
-	@$(call submake,$@)
