Tidying up of `Makefile`

--- a/puppet/Makefile
+++ b/puppet/Makefile
@@ -1,35 +1,26 @@
 # Environment
-DIST  := $(shell lsb_release --codename --short)
-USER  := $(shell whoami)
-
-# Core Commands
-APT    = /usr/bin/apt-get
-DPKG   = /usr/bin/dpkg
-RM     = /bin/rm
-SUDO   = /usr/bin/sudo
-WGET   = /usr/bin/wget
+DIST := $(shell lsb_release --codename --short)
+USER := $(shell whoami)
 
 # Commands
-PUPPET_BIN_DIR = /opt/puppetlabs/puppet/bin
-FACTER = $(PUPPET_BIN_DIR)/facter
-GEM    = $(PUPPET_BIN_DIR)/gem
-HIERA  = $(PUPPET_BIN_DIR)/hiera
-PUPPET = $(PUPPET_BIN_DIR)/puppet
-R10K   = $(PUPPET_BIN_DIR)/r10k
+PUPPET_BIN_DIR := /opt/puppetlabs/puppet/bin
+GEM    := $(PUPPET_BIN_DIR)/gem
+PUPPET := $(PUPPET_BIN_DIR)/puppet
+R10K   := $(PUPPET_BIN_DIR)/r10k
 
 unexport GEM_HOME
 export PATH := $(PUPPET_BIN_DIR):/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 .PHONY: all
-all: r10k puppet
+/all: r10k puppet
 
 .PHONY: clean
 clean:
-	$(RM) --force --recursive ext_modules/
+	rm --force --recursive ext_modules/
 
 .PHONY: puppet
 puppet: ext_modules | $(PUPPET)
-	$(SUDO) \
+	sudo \
 	    FACTER_dbus_session_bus_address=$(DBUS_SESSION_BUS_ADDRESS) \
 	    FACTER_id=$(USER) \
 	    $(PUPPET) apply \
@@ -44,22 +35,17 @@ install: $(PUPPET)
 .PHONY: r10k
 r10k: ext_modules
 
-#=====================
+#===============================================================================
 
-$(PUPPET_BIN_DIR)/%: | /tmp/puppet.deb
-	$(SUDO) $(DPKG) --install $|
-	$(SUDO) $(APT) update
-	$(SUDO) $(APT) install puppet-agent
+$(PUPPET_BIN_DIR)/%:
+	wget --output-document=/tmp/puppet.deb https://apt.puppetlabs.com/puppetlabs-release-pc1-$(DIST).deb
+	sudo dpkg --install /tmp/puppet.deb
+	sudo apt-get update
+	sudo apt-get --yes install puppet-agent
 
 $(R10K): | $(GEM)
-	sudo $(GEM) install --force r10k
+	sudo $(GEM) install --force --no-rdoc --no-ri r10k
 
 ext_modules: Puppetfile | $(R10K)
 	$(R10K) puppetfile install --verbose
 	$(R10K) puppetfile purge
-
-/tmp/puppet.deb: | $(WGET)
-	$(WGET) --output-document=$@ https://apt.puppetlabs.com/puppetlabs-release-pc1-$(DIST).deb
-
-$(WGET):
-	$(SUDO) $(APT) install wget
