Remove a dependency from the `puppet` target
If you want to update the external modules, you should be running `make all` (or just `make`) rather than `make puppet`).

--- a/puppet/Makefile
+++ b/puppet/Makefile
@@ -16,7 +16,7 @@ clean:
 	rm --force --recursive ext_modules/
 
 .PHONY: puppet
-puppet: ext_modules | $(PUPPET)
+puppet: | $(PUPPET)
 	sudo \
 	    FACTER_dbus_session_bus_address=$(DBUS_SESSION_BUS_ADDRESS) \
 	    FACTER_id=$(USER) \
