Set NTP servers
See https://help.ubuntu.com/lts/serverguide/NTP.html.

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -8,6 +8,11 @@ mysql::client::package_ensure: 'latest'
 nodejs::nodejs_package_ensure: 'latest'
 nodejs::repo_url_suffix: '5.x'
 ntp::package_ensure: 'latest'
+ntp::servers:
+  - '0.ubuntu.pool.ntp.org'
+  - '1.ubuntu.pool.ntp.org'
+  - '2.ubuntu.pool.ntp.org'
+  - '3.ubuntu.pool.ntp.org'
 packer::base_url: 'https://releases.hashicorp.com/packer/'
 packer::version: '0.10.0'
 puppet::ensure: 'latest'
