Some temporary fixes after updating to Ubuntu 16.04

--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -5,6 +5,6 @@
   - "node/%{::fqdn}"
   - "osfamily/%{::osfamily}"
   - "virtual/%{::virtual}"
-  - common
+  - 'common'
 :yaml:
   :datadir: 'hieradata'
