--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -1,22 +1,23 @@
 [global_config]
-  window_state = maximise
-  tab_position = hidden
   suppress_multiple_term_dialog = True
+  tab_position = hidden
+  window_state = maximise
 [keybindings]
-[profiles]
-  [[default]]
-    scroll_on_output = False
-    font = Monospace 16
-    scrollback_lines = 10000
-    scrollback_infinite = True
-    background_image = None
 [layouts]
   [[default]]
     [[[child1]]]
-      type = Terminal
       parent = window0
       profile = default
+      type = Terminal
     [[[window0]]]
-      type = Window
       parent = ""
+      type = Window
 [plugins]
+[profiles]
+  [[default]]
+    background_image = None
+    font = Monospace 16
+    scroll_on_output = False
+    scrollback_infinite = True
+    scrollback_lines = 10000
+    use_system_font = False
