--- a/home/ssh/config
+++ b/home/ssh/config
@@ -71,9 +71,9 @@ Host *
     VerifyHostKeyDNS yes
 
     # http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ControlMaster auto
-    ControlPath /tmp/ssh_mux_%h_%p_%r
-    ControlPersist 1h
-    ServerAliveCountMax 10
-    ServerAliveInterval 60
-    TCPKeepAlive no
+    #ControlMaster auto
+    #ControlPath /tmp/ssh_mux_%h_%p_%r
+    #ControlPersist 1h
+    #ServerAliveCountMax 10
+    #ServerAliveInterval 60
+    #TCPKeepAlive no
