--- a/home/config/sublime-text-3/.gitignore
+++ b/home/config/sublime-text-3/.gitignore
@@ -9,5 +9,6 @@
 
 # Package Control
 /Packages/User/Package Control.cache/
+/Packages/User/Package Control.last-run
 /Packages/User/Package Control.merged-ca-bundle
 /Packages/User/Package Control.user-ca-bundle
