Manage VIM plugins with Vundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "home/shell/modules/go-pkg-complete"]
 	path = home/shell/modules/go-pkg-complete
 	url = https://github.com/skelterjohn/go-pkg-complete.git
+[submodule "home/vim/bundle/Vundle.vim"]
+	path = home/vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git
