Complete hostnames from `~/.ssh/known_hosts`

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -4,6 +4,7 @@ Host *
   Compression yes
   ForwardAgent no
   ForwardX11 no
+  HashKnownHosts no
   IdentityFile ~/.ssh/keys/%h
   PasswordAuthentication no
   PubkeyAuthentication yes
