SSH should terminate the connection if it cannot establish all requested port forwards

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -3,6 +3,7 @@ Include config.d/*.conf
 Host *
   AddKeysToAgent yes
   Compression yes
+  ExitOnForwardFailure yes
   ForwardAgent no
   ForwardX11 no
   HashKnownHosts no
