--- a/home/ssh/config
+++ b/home/ssh/config
@@ -10,3 +10,6 @@ Host *
   IdentityFile ~/.ssh/keys/%h
   PasswordAuthentication no
   PubkeyAuthentication yes
+  ServerAliveCountMax 8
+  ServerAliveInterval 15
+  TCPKeepAlive yes
