--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -3,6 +3,7 @@
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   focus = mouse
   inactive_color_offset = 0.76
+  suppress_multiple_term_dialog = True
   title_hide_sizetext = True
   window_state = maximise
 [keybindings]
