Multiplex SSH connections to jump hosts

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -14,3 +14,14 @@ Host *
   ServerAliveCountMax 8
   ServerAliveInterval 15
   TCPKeepAlive yes
+
+Host jump.*
+  ForwardAgent yes
+
+# Multiplex SSH connections, but only for jump hosts (for now) since I have
+# had issues with multiplexed connections in the past (although I never took
+# the time to properly investigate).
+Host jump.*
+  ControlMaster auto
+  ControlPath ~/.ssh/connections/%h_%p_%r
+  ControlPersist 600
