--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ before_install:
   - 'sudo pip install --quiet dotfiles'
 install:
   - 'dotfiles --repo home --config home/dotfilesrc --sync'
-
+  - 'ls -al ~'
+script:
+  # Validate SSH configuration
+  - 'ssh -G localhost >/dev/null'
