--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ script:
 
   # Validate SSH configuration.
   - 'docker run --entrypoint /usr/bin/ssh --volume $TRAVIS_BUILD_DIR:/dotfiles chamunks/alpine-openssh -F /dotfiles/home/ssh/config -G localhost >/dev/null'
+
+  # Validate `wget` configuration.
+  - 'wget --config home/wgetrc --version'
