--- a/home/config/sublime-text-3/.editorconfig
+++ b/home/config/sublime-text-3/.editorconfig
@@ -1,5 +1,2 @@
-[Packages/User/Package Control.sublime-settings]
-indent_style = tab
-
-[Packages/User/Preferences.sublime-settings]
+[Packages/User/{Package Control,Preferences}.sublime-settings]
 indent_style = tab
