--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "home/vim/bundle/Vundle.vim"]
 	path = home/vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "shellscriptloader"]
+	path = tools/loader
+	url = https://git.code.sf.net/p/loader/code
+	branch = extended
