Make sure terminal windows are always on top

--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  always_on_top = True
   always_split_with_profile = True
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   focus = mouse
