--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -1,6 +1,7 @@
 [global_config]
   always_on_top = True
   always_split_with_profile = True
+  close_button_on_tab = False
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   inactive_color_offset = 0.76
   suppress_multiple_term_dialog = True
