--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -2,7 +2,7 @@
   always_on_top = True
   always_split_with_profile = True
   close_button_on_tab = False
-  enabled_plugins = InactivityWatch, ActivityWatch, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  enabled_plugins = InactivityWatch, ActivityWatch, APTURLHandler
   inactive_color_offset = 0.63
   suppress_multiple_term_dialog = True
   title_hide_sizetext = True
