--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -7,7 +7,9 @@
   suppress_multiple_term_dialog = True
   title_hide_sizetext = True
   window_state = maximise
+
 [keybindings]
+
 [layouts]
   [[default]]
     [[[child1]]]
@@ -15,15 +17,17 @@
       profile = default
       type = Terminal
     [[[window0]]]
-      parent = ""
       type = Window
+
 [plugins]
+
 [profiles]
   [[default]]
     audible_bell = True
-    background_image = None
     font = Monospace 14
+    mouse_autohide = False
     scroll_on_output = False
-    scrollback_infinite = True
+    scrollback_lines = 5000
+    scrollback_infinite = False
     use_system_font = False
     visible_bell = True
