--- a/home/ssh/config
+++ b/home/ssh/config
@@ -25,4 +25,4 @@ Host jump.*
   # the time to properly investigate).
   ControlMaster auto
   ControlPath ~/.ssh/connections/%h_%p_%r
-  ControlPersist 600
+  ControlPersist 1h
