--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -1,5 +1,4 @@
 [global_config]
-  always_on_top = True
   always_split_with_profile = True
   close_button_on_tab = False
   enabled_plugins = InactivityWatch, ActivityWatch, APTURLHandler
@@ -7,9 +6,7 @@
   suppress_multiple_term_dialog = True
   title_hide_sizetext = True
   window_state = maximise
-
 [keybindings]
-
 [layouts]
   [[default]]
     [[[child1]]]
@@ -18,16 +15,14 @@
       type = Terminal
     [[[window0]]]
       type = Window
-
 [plugins]
-
 [profiles]
   [[default]]
     audible_bell = True
+    background_image = None
     font = Monospace 14
     mouse_autohide = False
     scroll_on_output = False
     scrollback_lines = 5000
-    scrollback_infinite = False
     use_system_font = False
     visible_bell = True
