Set `$TERM` to `xterm-256color`
Ideally we would do this by setting `xterm` in the Terminator configuration, but this doesn't actually work (see https://answers.launchpad.net/terminator/+question/235355).

--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -20,9 +20,11 @@
   [[default]]
     audible_bell = True
     background_image = None
+    custom_command = TERM=xterm-256color bash
     font = Monospace 14
     mouse_autohide = False
     scroll_on_output = False
     scrollback_lines = 5000
+    use_custom_command = True
     use_system_font = False
     visible_bell = True
