--- a/home/config/composer/composer.json
+++ b/home/config/composer/composer.json
@@ -4,6 +4,7 @@
     "sort-packages": true
   },
   "require": {
+    "bamarni/symfony-console-autocomplete": "^1.3",
     "psy/psysh": "^0.9.7"
   }
 }
