--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
   path = tools/loader
   url = https://git.code.sf.net/p/loader/code
   branch = extended
+[submodule "src/modules/completion-ruby"]
+	path = src/modules/completion-ruby
+	url = https://github.com/mernen/completion-ruby.git
