--- a/home/config/composer/composer.json
+++ b/home/config/composer/composer.json
@@ -5,6 +5,7 @@
   },
   "require": {
     "bamarni/symfony-console-autocomplete": "^1.3",
+    "icanhazstring/composer-unused": "^0.5.6",
     "psy/psysh": "^0.9.7"
   }
 }
