--- a/home/config/composer/composer.json
+++ b/home/config/composer/composer.json
@@ -6,6 +6,7 @@
   "require": {
     "bamarni/symfony-console-autocomplete": "^1.3",
     "icanhazstring/composer-unused": "^0.5.6",
+    "localheinz/composer-normalize": "^1.2",
     "psy/psysh": "^0.9.7"
   }
 }
