--- a/home/config/composer/composer.json
+++ b/home/config/composer/composer.json
@@ -7,6 +7,7 @@
     "bamarni/symfony-console-autocomplete": "^1.3",
     "icanhazstring/composer-unused": "^0.5.6",
     "localheinz/composer-normalize": "^1.2",
+    "maglnet/composer-require-checker": "^2.0",
     "psy/psysh": "^0.9.7"
   }
 }
