Revert "Change naming convention for SSH private keys"
This reverts commit 6ae7755c536e339cf7414f2008a00796726aab9b.

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -20,7 +20,7 @@ Host *
   ForwardX11 no
   GSSAPIAuthentication no
   HashKnownHosts no
-  IdentityFile ~/.ssh/keys/%h.key
+  IdentityFile ~/.ssh/keys/%h
   PasswordAuthentication no
   PubkeyAuthentication yes
   ServerAliveCountMax 8
