--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os: 'ubuntu'
 services:
   - 'docker'
 
+install:
+  - 'sudo apt update'
+  - 'sudo apt install python3 python3-virtualenv'
 script:
   - 'make compile'
   - 'make lint'
