--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-# Generated
-/home/bashrc
-/home/profile
-
-# Temporary
+# Shell Script Loader
 /compiler.calls.obj
 /compiler.comp.obj
 /compiler.main.obj
