--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,9 @@
 [submodule "src/modules/completion-ruby"]
   path = src/modules/completion-ruby
   url = https://github.com/mernen/completion-ruby.git
+[submodule "tools/bats-assert"]
+	path = tools/bats-assert
+	url = https://github.com/ztombol/bats-assert.git
+[submodule "tools/bats-support"]
+	path = tools/bats-support
+	url = https://github.com/ztombol/bats-support.git
