--- a/home/config/helm/repositories.yaml
+++ b/home/config/helm/repositories.yaml
@@ -1,10 +1,11 @@
-apiVersion: v1
-generated: "2020-02-06T07:52:33.023685838+11:00"
+---
+apiVersion: 'v1'
+generated: '2020-02-06T07:52:33.023685838+11:00'
 repositories:
-- caFile: ""
-  certFile: ""
-  keyFile: ""
-  name: stable
-  password: ""
-  url: https://kubernetes-charts.storage.googleapis.com
-  username: ""
+  - caFile: ''
+    certFile: ''
+    keyFile: ''
+    name: 'stable'
+    password: ''
+    url: 'https://kubernetes-charts.storage.googleapis.com'
+    username: ''
