--- a/home/config/cloudtoken/config.yaml
+++ b/home/config/cloudtoken/config.yaml
@@ -1,8 +1,8 @@
+---
 plugins:
-    pre_auth:
-    auth:
-        - saml
-    post_auth:
-        - export_credentials_shell
-        - export_credentials_json
-#       - export_credentials_awscli
+  pre_auth:
+  auth:
+    - 'saml'
+  post_auth:
+    - 'export_credentials_shell'
+    - 'export_credentials_json'
